# viyadb

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VERSION
devenv/: Dockerfile  README.md  run.sh
devenv/docker/: Dockerfile  README.md  prepare.sh  run.sh
devenv/vagrant/: README.md  Vagrantfile
package/: Dockerfile  README.md  docker.sh  store.json  tarball.sh  ubuntu-toolchain-r.list  vsql
scripts/: build-and-test.sh  check-formatting.sh  collect-coverage.sh  debug-build.sh  integration-tests.sh  release-build.sh  travis-build.sh
scripts/cluster_test/: config.sh  consul-backup.json  docker-compose.yml  node1.json  node2.json  start-consul.sh  store.json  test.py
src/: CMakeLists.txt
src/cluster/: CMakeLists.txt  batch_info.cc  batch_info.h  configurator.cc  configurator.h  controller.cc  controller.h  downloader.cc  downloader.h  feeder.cc  feeder.h  kafka_notifier.cc  kafka_notifier.h  loader.cc  loader.h  notifier.cc  notifier.h  partitioning.cc  partitioning.h  partitions.cc  partitions.h  plan.cc  plan.h  query.cc  query.h  splitter.cc  splitter.h  worker.cc  worker.h  workers_watch.cc  workers_watch.h
src/cluster/consul/: consul.cc  consul.h  leader.cc  leader.h  service.cc  service.h  session.cc  session.h  watch.cc  watch.h
src/cluster/feed/: feeder.cc  feeder.h  kafka_listener.cc  kafka_listener.h  kafka_notifier.cc  kafka_notifier.h  listener.cc  listener.h  notifier.cc  notifier.h
src/cluster/http/: service.cc  service.h
src/cluster/query/: agg_runner.cc  agg_runner.h  aggregator.cc  aggregator.h  client.cc  client.h  filter_analyzer.cc  filter_analyzer.h  load_runner.cc  load_runner.h  local_runner.cc  local_runner.h  query.cc  query.h  runner.cc  runner.h  search_runner.cc  search_runner.h  worker_state.cc  worker_state.h
src/codegen/: CMakeLists.txt  compiler.cc  compiler.h  generator.cc  generator.h  shared_library.cc  shared_library.h
src/codegen/db/: metadata.cc  metadata.h  rollup.cc  rollup.h  store.cc  store.h  upsert.cc  upsert.h
src/codegen/query/: agg_query.cc  agg_query.h  filter.cc  filter.h  header.cc  header.h  post_agg.cc  post_agg.h  query.cc  query.h  scan.cc  scan.h  search_query.cc  search_query.h  select_query.cc  select_query.h  sort.cc  sort.h
src/coord/: CMakeLists.txt  controller.cc  controller.h
src/coord/consul/: consul.cc  consul.h  leader.cc  leader.h  service.cc  service.h  session.cc  session.h  watch.cc  watch.h
src/db/: CMakeLists.txt  column.cc  column.h  database.cc  database.h  defs.h.in  dictionary.cc  dictionary.h  rollup.cc  rollup.h  segment.h  stats.h  store.cc  store.h  table.cc  table.h
src/input/: CMakeLists.txt  buffer_loader.cc  buffer_loader.h  file.cc  file.h  file_loader.cc  file_loader.h  loader.cc  loader.h  loader_desc.cc  loader_desc.h  loader_factory.cc  loader_factory.h  simple.cc  simple.h  stats.cc  stats.h  watcher.cc  watcher.h
src/query/: CMakeLists.txt  filter.cc  filter.h  output.h  query.cc  query.h  runner.cc  runner.h  stats.cc  stats.h
src/server/: CMakeLists.txt  args.cc  args.h  main.cc  supervisor.cc  supervisor.h  viyad.cc  viyad.h
src/server/http/: output.h  service.cc  service.h
src/sql/: CMakeLists.txt  driver.cc  driver.h  parser.y  scanner.h  scanner.l  statement.h
src/util/: CMakeLists.txt  base64.cc  base64.h  bitset.h  config.cc  config.h  crc32.h  format.h  hostname.cc  hostname.h  latch.h  likely.h  macros.h  process.cc  process.h  rwlock.h  sanitize.cc  sanitize.h  schedule.h  scope_guard.h  statsd.cc  statsd.h  string.h  time.cc  time.h
test/: CMakeLists.txt  aggregation.cc  bitset.cc  boolean.cc  cluster_query.cc  codegen.cc  db.h  filter.cc  index.cc  limits.cc  load.cc  main.cc  metrics.cc  partitioning.cc  plan.cc  search.cc  select.cc  sort.cc  sql.cc  time.cc
test/cluster_test/: Dockerfile-setup  docker-compose.yml  run-node.py  setup.py  start-node.sh  test.py
